--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
       </div>
     </div>
 
-    <div class="table-wrap">
-      <div id="status" class="loading">Зареждане на данни…</div>
-      <table id="table" style="display:none">
+    <div class="table-container">
+      <table id="crypto-table">
         <thead>
           <tr>
             <th>Валута</th>
