--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       .desktop-only{ display:none }
       table{ font-size:12px }
       .summary{ grid-template-columns:1fr }
+	  thead { margin-bottom: 6px; }
     }
 	.table-container {
       overflow-x: auto;
