--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	  thead th {
         position: sticky;
         top: 0;
-        background: #333;
-        color: white;
+        /* background: #333;
+        color: white; */
         z-index: 2;
       }
       tbody td {
