--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 }
 *{box-sizing:border-box}
 body{margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Arial;background:var(--bg);color:var(--text)}
-header{padding:14px;display:flex;gap:12px;align-items:center;justify-content:space-between;background:#0b0f14;position:sticky;top:0;z-index:20;border-bottom:1px solid #202635}
+header{padding:14px;display:flex;gap:12px;align-items:center;justify-content:space-between;background:#0b0f14;position:fixed;top:0;left:0;right:0; z-index:100;;border-bottom:1px solid #202635}
 h1{margin:0;font-size:18px}
 .controls{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
 button,select,input{background:var(--card);color:var(--text);border:1px solid #2a3142;padding:8px 10px;border-radius:8px}
 .badge{padding:4px 8px;border-radius:999px;border:1px solid #2a3142;color:var(--muted);font-size:13px}
-main{padding:16px}
+main{padding-top:80px;}
 .summary{display:flex;gap:12px;margin-bottom:12px;flex-wrap:wrap}
 .card{background:var(--card);border:1px solid #202635;padding:10px;border-radius:10px;min-width:220px}
 .card h3{margin:0 0 8px;color:var(--muted);font-size:13px}
@@ -37,7 +37,7 @@ tbody tr:hover{background:#101722}
 #progress{height:8px;border-radius:6px;background:linear-gradient(90deg,var(--accent),#00b39f);width:0%;transition:width .25s}
 @media (max-width:980px){
   table{min-width:900px;font-size:12px}
-  thead th{top:56px}
+  thead th{top:0}
 }
 </style>
 </head>
