--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ main{padding-top:80px;}
 .table-wrap{background:var(--card);border:1px solid #202635;border-radius:10px;overflow:auto}
 .table-container{overflow:auto}
 table{width:100%;border-collapse:collapse;font-size:13px;min-width:1200px}
-thead th{background:#0f1620;position:sticky;top:60px;padding:10px;text-align:center;z-index:5}
+thead th{ background:#121722;position:sticky;top:0; /* вместо 62px */ z-index:5;}
 th,td{padding:8px;border-bottom:1px solid #202635;text-align:center;vertical-align:middle}
 tbody tr:hover{background:#101722}
 .small{font-size:12px;color:var(--muted)}
