--- a/index.html
+++ b/index.html
@@ -7,13 +7,28 @@
 <style>
   :root{--bg:#0f1115;--card:#161a22;--text:#e6e6e6;--muted:#a3a3a3;--pos:#22c55e;--neg:#ef4444;--accent:#60a5fa}
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial;background:var(--bg);color:var(--text)}
-  header{padding:16px;display:flex;gap:12px;flex-wrap:wrap;align-items:center;justify-content:space-between;background:#0c0f14;position:sticky;top:0;z-index:20;border-bottom:1px solid #202635}
+  
+  /* фиксиран header */
+  header{
+    padding:16px;
+    display:flex;gap:12px;flex-wrap:wrap;
+    align-items:center;justify-content:space-between;
+    background:#0c0f14;
+    position:fixed; /* вместо sticky */
+    top:0;left:0;right:0;
+    z-index:20;
+    border-bottom:1px solid #202635
+  }
+  
   h1{font-size:18px;margin:0;font-weight:600}
   .controls{display:flex;gap:8px;flex-wrap:wrap;align-items:center}
   button, select, input{background:var(--card);color:var(--text);border:1px solid #2a3142;border-radius:10px;padding:8px 10px;font-size:13px}
   button:hover{cursor:pointer;border-color:#3a445a}
   .badge{padding:4px 8px;border-radius:999px;font-size:12px;border:1px solid #2a3142;color:var(--muted)}
-  main{padding:16px}
+  
+  /* отместваме основното съдържание */
+  main{padding:96px 16px 16px} /* 96px = височина на header-а */
+  
   .summary{margin-bottom:16px;display:grid;grid-template-columns:1fr 1fr;gap:16px}
   .card{background:var(--card);border:1px solid #202635;border-radius:12px;padding:12px}
   .card h3{margin:0 0 8px;font-size:13px;color:var(--muted)}
@@ -24,24 +39,36 @@
   .table-wrap{background:var(--card);border:1px solid #202635;border-radius:12px;overflow:hidden}
   .table-container{overflow:auto}
   table{width:100%;border-collapse:collapse;font-size:13px;min-width:1000px}
-  thead th{background:#121722;position:sticky;top:62px;z-index:5;padding:10px;text-align:center}
+  
+  /* sticky заглавия на таблица */
+  thead th{
+    background:#121722;
+    position:sticky;
+    top:0;          /* вече не е 62px */
+    z-index:5;
+    padding:10px;
+    text-align:center
+  }
+  
   th,td{padding:10px;border-bottom:1px solid #202635;text-align:center;vertical-align:middle}
   tbody tr:hover{background:#121621}
   .green{color:var(--pos);font-weight:700}
   .red{color:var(--neg);font-weight:700}
   .mono{font-variant-numeric:tabular-nums}
-  .comment{ text-align:left;color:var(--muted);max-width:320px }
+  .comment{text-align:left;color:var(--muted);max-width:320px}
   .loading{padding:24px;text-align:center;color:var(--muted)}
   .small{font-size:12px;color:var(--muted)}
   #progressWrap{background:rgba(255,255,255,0.03);border-radius:8px;padding:6px;margin-left:8px;min-width:220px}
   #progress{height:8px;background:linear-gradient(90deg,var(--accent),#00b39f);border-radius:6px;width:0%;transition:width .2s}
+  
   @media (max-width:980px){
     .desktop-only{display:none}
     table{font-size:12px;min-width:900px}
     .summary{grid-template-columns:1fr}
-    thead th{top:56px}
+    main{padding-top:88px} /* малко по-малък padding за мобилни */
   }
 </style>
+
 </head>
 <body>
 <header>
