--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     display:flex;gap:12px;flex-wrap:wrap;
     align-items:center;justify-content:space-between;
     background:#0c0f14;
-    position:fixed; /* вместо sticky */
+    position:fixed;
     top:0;left:0;right:0;
     z-index:20;
     border-bottom:1px solid #202635
@@ -26,10 +26,15 @@
   button:hover{cursor:pointer;border-color:#3a445a}
   .badge{padding:4px 8px;border-radius:999px;font-size:12px;border:1px solid #2a3142;color:var(--muted)}
   
-  /* отместваме основното съдържание */
-  main{padding:96px 16px 16px} /* 96px = височина на header-а */
+  main{padding:96px 16px 16px}
   
-  .summary{margin-bottom:16px;display:grid;grid-template-columns:1fr 1fr;gap:16px}
+  /* FIX: flex, за да не изчезва topBull */
+  .summary{margin-bottom:16px;display:flex;flex-wrap:wrap;gap:16px}
+  .summary .card{flex:1 1 0;min-width:280px}
+  @media (max-width:980px){
+    .summary{flex-direction:column}
+  }
+
   .card{background:var(--card);border:1px solid #202635;border-radius:12px;padding:12px}
   .card h3{margin:0 0 8px;font-size:13px;color:var(--muted)}
   ul{list-style:none;margin:0;padding:0}
@@ -40,11 +45,10 @@
   .table-container{overflow:auto}
   table{width:100%;border-collapse:collapse;font-size:13px;min-width:1000px}
   
-  /* sticky заглавия на таблица */
   thead th{
     background:#121722;
     position:sticky;
-    top:0;          /* вече не е 62px */
+    top:0;
     z-index:5;
     padding:10px;
     text-align:center
@@ -64,8 +68,7 @@
   @media (max-width:980px){
     .desktop-only{display:none}
     table{font-size:12px;min-width:900px}
-    .summary{grid-template-columns:1fr}
-    main{padding-top:88px} /* малко по-малък padding за мобилни */
+    main{padding-top:88px}
   }
 </style>
 
